--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/data_base
-spring.datasource.username= userDto
+spring.datasource.username= user
 spring.datasource.password= qwerty
 
 Hibernate ddl auto (create, create-drop, validate, update)
