--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/data_base
 spring.datasource.username= user
 spring.datasource.password= qwerty
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= validate
