--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username= user
 spring.datasource.password= qwerty
 
 Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= validate
+spring.jpa.hibernate.ddl-auto= update
