--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/data_base
+server.port=8080
 spring.datasource.username= user
 spring.datasource.password= qwerty
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
