--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/data_base
 server.port=8080
 spring.datasource.username= user
 spring.datasource.password= qwerty
-spring.jpa.hibernate.ddl-auto= update
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+spring.jpa.hibernate.ddl-auto= validate
