--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8080
 spring.datasource.username= user
 spring.datasource.password= qwerty
 spring.jpa.hibernate.ddl-auto= update
+
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+server.servlet.session.timeout=15m
